--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 body{
-    display:flex;
-    flex-direction: column;
     gap: 10px;
     background-color: #3AAFA9;
+    padding: 40px;
+    padding-top: 60px;
 }
 .maincontainer{
     align-self: center;
