--- a/styles.css
+++ b/styles.css
@@ -5,21 +5,23 @@ body{
     padding-top: 60px;
 }
 .maincontainer{
-    align-self: center;
-    margin: auto;
-    width: 300px;
-    height: 250px;
+
     display: flex;
+    width: 300px;
+    margin: auto;
+    box-sizing: border-box;
     flex-direction: column;
-    gap: 10px;
+    align-content: center;
+    text-align: center;
+    gap: 5px;
     border-radius: 5px;
     background-color: #2B7A78;
     padding: 10px;
 }
 #display{
-    width: 300px;
+    width: auto;
     height: 50px;
-    border: 2px solid grey;
+    border: 5px solid #2B7A78;
     border-radius: 5px;
     text-align: center;
     background-color: #DEF2F1;
@@ -31,20 +33,21 @@ body{
 .numbers{
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 5px;
 }
 .operatorcontainer{
     display: flex;
-    gap: 10px;
+    gap: 5px;
 }
 .operator2container{
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 5px;
 }
 button{
     border: 1px solid black;
     border-radius: 10px;
     width: 50px;
+    height: 50px;
     background-color: #DEF2F1;
 }
