--- a/styles.css
+++ b/styles.css
@@ -23,8 +23,10 @@ body{
     height: 50px;
     border: 5px solid #2B7A78;
     border-radius: 5px;
-    text-align: center;
+    text-align: left;
+    box-sizing: border-box;
     background-color: #DEF2F1;
+    padding: 10px;
 }
 .thirdrow, .firstrow, .secondrow{
     display:flex;
